--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 * {
   margin: 0;
   padding: 0;}
+/*Depostivios grandes(pc)*/
+
 
 
 @media only screen and (min-width: 992px) {
@@ -171,6 +173,7 @@
   font-family: 'Roboto', sans-serif;
   background-color: #0c4316a2;;
   border-radius: 3px;
+  text-align: center;
 }
 .slider__txt {
   color: rgb(255, 255, 255);
@@ -459,25 +462,11 @@ background-position: center;
   }
 
 }
-/*Depostivios*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/*Depostivios Medianos(tablets)*/
 
 
   
-@media only screen and (min-width: 576px) {
+@media (min-width: 426px) {
   h1, .menu{
     color: white;
     animation-duration: 1s;
@@ -643,6 +632,7 @@ background-position: center;
   font-family: 'Roboto', sans-serif;
   background-color: #0c4316a2;;
   border-radius: 3px;
+  text-align: center;
 }
 .slider__txt {
   color: rgb(255, 255, 255);
@@ -932,22 +922,10 @@ background-position: center;
 
 }
 
+/*Depostivios pequeños(moviles)*/
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
+ 
 @media (max-width: 425px) {
 
   * {
@@ -1019,7 +997,8 @@ background-position: center;
 
 .slider {
 
-  height: 500px;
+  height: 250px;
+  width: auto;
   position: relative;
   overflow: hidden;
   display: -webkit-box;
@@ -1037,7 +1016,7 @@ background-position: center;
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
-          display: none;
+          display: ;
 }
 .slider__nav {
   width: 12px;
@@ -1118,27 +1097,29 @@ background-position: center;
 }
 
 .slider__caption {
-  font-weight: 500px;
-  margin: 15rem 0 1rem;
+  font-weight: 200px;
+  margin: 8rem 0 1rem;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.483);
   color: rgb(223, 223, 223);
   text-transform: uppercase;
   opacity: 1;
-  font-size: 30px;
+  font-size: 12px;
   font-family: 'Roboto', sans-serif;
   background-color: #0c4316a2;;
   border-radius: 3px;
+  text-align: center;
+  ;
 }
 .slider__txt {
   color: rgb(255, 255, 255);
   margin-bottom: rem;
   max-width: 300px;
-  font-size: 30px;
+  font-size: 15px;
   border-radius: 3px;
         font-family: 'Roboto', sans-serif;
         background-color: #00000051;;
         text-align:left;font-weight:normal;vertical-align:middle;
-      
+      display: none;
         
   
 }
